--- a/themes/basic/layouts/partials/head.html
+++ b/themes/basic/layouts/partials/head.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Inter:wght@200&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Jost:wght@300;600&display=swap"
     rel="stylesheet"
   />
 
