--- a/themes/basic/layouts/partials/nav.html
+++ b/themes/basic/layouts/partials/nav.html
@@ -1,6 +1,8 @@
 <nav>
-  <a href="/">Home</a>
-  <a href="/about">About</a>
-  <a href="/resume">Résumé</a>
-  <a href="/contact">Contact</a>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/resume">Résumé</a></li>
+    <li><a href="/contact">Contact</a></li>
+  </ul>
 </nav>
