--- a/themes/basic/static/css/style.css
+++ b/themes/basic/static/css/style.css
@@ -1,5 +1,8 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "Jost", sans-serif;
+  font-size: 120%;
+  color: #333;
+  background: linear-gradient(135deg, rgb(255, 245, 232), rgb(245, 235, 212));
 }
 
 h1,
@@ -7,7 +10,7 @@ h2,
 h3,
 h4,
 nav {
-  font-family: "Fjalla One", sans-serif;
+  font-family: "Jost", sans-serif;
 }
 
 .container {
@@ -17,19 +20,40 @@ nav {
 
 nav,
 footer {
-  background-color: #333;
-  color: #fff;
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
+  padding: 0.25rem 0;
 }
 
-nav {
-  display: flex;
-  flex-direction: column;
+footer {
+  text-align: right;
 }
-nav > a {
+
+nav li {
+  display: block;
+  list-style-type: none;
   flex: 1;
   text-align: center;
   text-decoration: none;
-  color: #fff;
+  padding: 0;
+  margin: 0;
+}
+
+nav li:hover {
+  background-color: white;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space;
+  gap: 1rem;
+  padding: 0;
+  margin: 0;
+}
+nav li a {
+  text-decoration: none;
+  color: #333;
 }
 @media only screen and (min-width: 768px) {
   nav {
