--- a/themes/basic/layouts/partials/nav.html
+++ b/themes/basic/layouts/partials/nav.html
@@ -4,5 +4,6 @@
     <li><a href="/about">About</a></li>
     <li><a href="/resume">Résumé</a></li>
     <li><a href="/contact">Contact</a></li>
+    <li><a href="/projects">Projects</a></li>
   </ul>
 </nav>
